tests/084_constants.err
pirxc compilation failed: exit status 1
Output: tests/084_constants.pirx:3:5: cannot assign value to constant x
Error: exit status 1
