tests/084_constants.pirx
func main(): int {
  val x = 1;
  x = 2;
  return 0;
}
